--- a/index.html
+++ b/index.html
@@ -180,6 +180,90 @@
                         </div>
                     </div>
                 </div>
+                <!-- New Project Card 4 -->
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('https://placehold.co/600x400/8c7ae6/ffffff?text=Project+4+Image'); background-size: cover; background-position: center;">
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Data Cleaning & Transformation</h3>
+                        <p class="text-gray-200 mb-4">A project demonstrating advanced data cleaning, transformation, and validation techniques using Python with Pandas and SQL.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fab fa-github"></i> <span>GitHub</span>
+                            </a>
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fas fa-link"></i> <span>Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Project Card 5 -->
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('https://placehold.co/600x400/28a745/ffffff?text=Project+5+Image'); background-size: cover; background-position: center;">
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Predictive Sales Analysis</h3>
+                        <p class="text-gray-200 mb-4">Developed a predictive model to forecast future sales based on historical data, utilizing machine learning algorithms in Python and visualized with Tableau.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fab fa-github"></i> <span>GitHub</span>
+                            </a>
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fas fa-link"></i> <span>Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Project Card 6 -->
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('https://placehold.co/600x400/fd7e14/ffffff?text=Project+6+Image'); background-size: cover; background-position: center;">
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Customer Churn Prediction</h3>
+                        <p class="text-gray-200 mb-4">Implemented a machine learning model to predict customer churn, helping businesses identify at-risk customers and improve retention strategies.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fab fa-github"></i> <span>GitHub</span>
+                            </a>
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fas fa-link"></i> <span>Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Project Card 7 -->
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('https://placehold.co/600x400/6f42c1/ffffff?text=Project+7+Image'); background-size: cover; background-position: center;">
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">Sentiment Analysis Tool</h3>
+                        <p class="text-gray-200 mb-4">A Python-based tool for performing sentiment analysis on text data, useful for understanding public opinion from social media or reviews.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fab fa-github"></i> <span>GitHub</span>
+                            </a>
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fas fa-link"></i> <span>Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Project Card 8 -->
+                <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
+                    style="background-image: url('https://placehold.co/600x400/20c997/ffffff?text=Project+8+Image'); background-size: cover; background-position: center;">
+                    <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
+                        <h3 class="text-2xl font-semibold text-white mb-2">SQL Data Warehouse Design</h3>
+                        <p class="text-gray-200 mb-4">Designed and implemented a relational database and data warehouse for a retail company, optimizing data retrieval and reporting performance.</p>
+                        <div class="flex space-x-4">
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fab fa-github"></i> <span>GitHub</span>
+                            </a>
+                            <a href="#" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
+                                <i class="fas fa-link"></i> <span>Live Demo</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
