--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                     </div>
                 </div>
                 
-                <!-- Project 2: Cyclistic's Riding Patterns -->
+                <!-- Project 2: Cyclistic's Trip Behaviors -->
                 <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
                     style="background-image: url('cyclist.jpg'); background-size: cover; background-position: center;">
                     <!-- Overlay for text readability -->
                     <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
-                        <h3 class="text-2xl font-semibold text-white mb-2">Cyclistic's Riding Patterns</h3>
-                        <p class="text-gray-200 mb-4">This project focuses on integrating, cleaning, and analyzing data from Cyclistic, a bike-sharing service, to uncover insights into bike usage patterns and disparities between annual members and casual riders.</p>
+                        <h3 class="text-2xl font-semibold text-white mb-2">Cyclistic's Trip Behaviors</h3>
+                        <p class="text-gray-200 mb-4">This project integrates, cleans, and analyses Cyclistic bike-sharing data to understand bike utilisation patterns and differences between annual members and casual riders.</p>
                         <div class="flex space-x-4">
                             <a href="https://github.com/Shazib36/Google-Data-Analyst-Cyclistic-Python-SQL-main-shaz" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
@@ -166,12 +166,12 @@
                     </div>
                 </div>
 
-                <!-- Project 3: Google Fiber: Repeated Calls Dashboard -->
+                <!-- Project 3: Repeated Calls Dashboard -->
                 <div class="relative rounded-lg shadow-lg overflow-hidden border border-gray-200 hover:shadow-xl transition-shadow duration-300 min-h-[300px]"
                     style="background-image: url('dashboard.jpg'); background-size: cover; background-position: center;">
                     <!-- Overlay for text readability -->
                     <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
-                        <h3 class="text-2xl font-semibold text-white mb-2">Google Fiber: Repeated Calls Dashboard</h3>
+                        <h3 class="text-2xl font-semibold text-white mb-2">Repeated Calls Dashboard</h3>
                         <p class="text-gray-200 mb-4">Google Business Intelligence Capstone Project</p>
                         <div class="flex space-x-4">
                             <a href="https://github.com/Shazib36/Google-BI-FIBER-EXCEL-TABLEAU" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
@@ -185,7 +185,7 @@
                     style="background-image: url('sql.jpeg'); background-size: cover; background-position: center;">
                     <div class="absolute inset-0 bg-black bg-opacity-70 flex flex-col justify-end p-6">
                         <h3 class="text-2xl font-semibold text-white mb-2">Covid 19 Data Exploration</h3>
-                        <p class="text-gray-200 mb-4">Used SQL Server to clean, transform, and analyze global Covid-19 data from 2020–2021. Applied joins, CTEs, temp tables, window functions, aggregate functions, views, and data type conversions to perform efficient data preprocessing and exploratory data analysis(EDA).</p>
+                        <p class="text-gray-200 mb-4">Utilised SQL Server to cleanse, transform, and analyse global Covid-19 data from 2020 to 2021.  Utilised applied joins, Common Table Expressions (CTEs), temporary tables, window functions, aggregate functions, views, and data type conversions to conduct effective data preprocessing and exploratory data analysis (EDA).</p>
                         <div class="flex space-x-4">
                             <a href="https://github.com/Shazib36/Covid-19-SQL-project" target="_blank" class="text-blue-300 hover:text-blue-100 font-medium transition duration-300 flex items-center space-x-2">
                                 <i class="fab fa-github"></i> <span>GitHub</span>
